[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "api-probe"
version = "0.1.0"
description = "识别掺水 LLM 中转、假模型、降质模型、缓存倍率和可疑计费 / Detect watered-down LLM relays, fake models, cache multipliers, and billing risk"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[tool.setuptools]
packages = ["api_probe", "api_probe.static"]

[tool.setuptools.package-data]
"api_probe.static" = ["*.html", "*.css", "*.js"]

[project.scripts]
api-probe = "api_probe.cli:main"
api-probe-web = "api_probe.web:main"
